lmtp listen on all local addresses

--- a/mda/dovecot/conf.d/10-master.conf
+++ b/mda/dovecot/conf.d/10-master.conf
@@ -61,7 +61,7 @@ service lmtp {
   # Create inet listener only if you can't use the above UNIX socket
   inet_listener lmtp {
     # Avoid making LMTP visible for the entire internet
-    #address = 0.0.0.0
+    address = 0.0.0.0
     port = 24 
     #user = vmail
   }
