lmtp linking postfix-dovecot to deliver the messages

--- a/mda/dovecot/conf.d/10-master.conf
+++ b/mda/dovecot/conf.d/10-master.conf
@@ -54,19 +54,19 @@ service pop3-login {
 #}
 
 service lmtp {
-  #unix_listener lmtp {
-  #  #mode = 0666
-  #}
+  unix_listener lmtp {
+    #mode = 0666
+  }
 
   # Create inet listener only if you can't use the above UNIX socket
   inet_listener lmtp {
     # Avoid making LMTP visible for the entire internet
-    address = 0.0.0.0
-    port = 24 
-    #user = vmail
+    #address =
+    port = 24
   }
 
-  process_min_avail = 5
+  # in this setup we user vamil as delivery user
+  user = vmail
 }
 
 service imap {
