--- a/mda/dovecot/conf.d/10-logging.conf
+++ b/mda/dovecot/conf.d/10-logging.conf
@@ -42,21 +42,21 @@ debug_log_path = /dev/stdout
 #log_core_filter = 
 
 # Log unsuccessful authentication attempts and the reasons why they failed.
-auth_verbose = yes
+auth_verbose = no
 
 # In case of password mismatches, log the attempted password. Valid values are
 # no, plain and sha1. sha1 can be useful for detecting brute force password
 # attempts vs. user simply trying the same password over and over again.
 # You can also truncate the value to n chars by appending ":n" (e.g. sha1:6).
-auth_verbose_passwords = yes
+auth_verbose_passwords = no
 
 # Even more verbose logging for debugging purposes. Shows for example SQL
 # queries.
-auth_debug = yes
+auth_debug = no
 
 # In case of password mismatches, log the passwords and used scheme so the
 # problem can be debugged. Enabling this also enables auth_debug.
-auth_debug_passwords = yes
+auth_debug_passwords = no
 
 # Enable mail process debugging. This can help you figure out why Dovecot
 # isn't finding your mails.
