Add the clamav image and glue for it in provision of the amavis image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,9 +84,29 @@ services:
       - vmail:/home/vmail
       - certs:/certs
 
+  clamav:
+    image: mailad/clamav
+    build: ./clamav/
+    domainname: mailad.cu
+    hostname: clamav
+    healthcheck:
+        test: ["CMD", "./check.sh"]
+        interval: 60s
+        retries: 3
+        start_period: 120s
+    environment:
+      # CLAMAV_PROXY_SERVER: 10.1.2.3
+      # CLAMAV_PROXY_PORT: 3128
+      CLAMAV_ALTERNATE_MIRROR: clamav.ddns.net
+    ports:
+      - "3310"
+    volumes:
+      - clamav:/var/lib/clamav
+
 volumes:
   samba_var:
   samba_etc:
   certs:
   vmail:
   spool:
+  clamav:
