--- a/mda/dovecot/conf.d/10-master.conf
+++ b/mda/dovecot/conf.d/10-master.conf
@@ -111,11 +111,11 @@ service auth {
   }
 
   # Postfix smtp-auth
-  unix_listener /var/spool/postfix/private/auth {
-    mode = 0666
-    user = $default_internal_user
-    group = $default_internal_user
-  }
+  # unix_listener /var/spool/postfix/private/auth {
+  #   mode = 0666
+  #   user = $default_internal_user
+  #   group = $default_internal_user
+  # }
 
   inet_listener {
     port = 12345
