Implement roundcube webmail, migrate compose file to .env

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DOMAIN=mailad.cu
 DOVECOT_DOMAIN=mailad.cu
+HOST_FQDN="correo.mailad.cu"
 SAMBA_DC_ADMIN_PASSWD="S3cur3p4ssw0rd_."
 SAMBA_LINK_USER=linux
 SAMBA_LINK_USER_CN="CN=linux,CN=Users,DC=mailad,DC=cu"
