--- a/amavis/docker-compose.yml
+++ b/amavis/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       AMAVIS_MTA: mta
       AMAVIS_SPAMASSASSIN_DISABLED: 1
       AMAVIS_AV_DISABLED: 1
+      AMAVIS_DKIM_SIGNING_DISABLED: 0 
+      AMAVIS_DKIM_DOMAIN: mailad.cu
     ports:
       - "10024:10024"
     volumes:
